@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.snapgames</groupId>
     <artifactId>cubewar</artifactId>
@@ -120,11 +120,7 @@
                 <version>3.10.1</version>
                 <configuration>
                     <release>${maven.compiler.source}</release>
-                    <enablePreview>true</enablePreview>
-                    <source>18</source>
-                    <target>18</target>
                     <encoding>UTF-8</encoding>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
@@ -494,7 +490,7 @@
                                 <phase>site</phase>
                                 <configuration>
                                     <executable>pandoc</executable>
-                                    <workingDirectory />
+                                    <workingDirectory/>
                                     <arguments>
                                         <argument>docs/epub-metadata.yml</argument>
                                         <argument>docs/00-index.md</argument>
@@ -533,7 +529,7 @@
                                 <phase>package</phase>
                                 <configuration>
                                     <executable>pandoc</executable>
-                                    <workingDirectory />
+                                    <workingDirectory/>
                                     <arguments>
                                         <argument>docs/epub-metadata.yml</argument>
                                         <argument>docs/00-index.md</argument>
